<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.android.kartooncafe.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.android.kartooncafe.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.android.kartooncafe.ui.menu.MenuFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_reservation"
        android:name="com.example.android.kartooncafe.ui.tableReservation.ReservationFragment"
        android:label="@string/menu_table_reservation"
        tools:layout="@layout/fragment_reservation" />

    <!--    <fragment-->
    <!--        android:id="@+id/nav_share"-->
    <!--        android:name="com.example.android.kartooncafe.ui.share.ShareFragment"-->
    <!--        android:label="@string/menu_share"-->
    <!--        tools:layout="@layout/fragment_share" />-->

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.android.kartooncafe.ui.send.SendFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_send" />
</navigation>